--- a/style.css
+++ b/style.css
@@ -1,15 +1,219 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500;700&family=Poppins:wght@300;400;500;600&family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Fira+Sans+Condensed:wght@400;500;700&family=Poppins:wght@300;400;500;600&family=Ubuntu:wght@300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;  
-}
-body {
-    background: url("image/");
     font-family: 'Poppins', sans-serif;
 }
+body {
+    background: rgb(245, 195, 102);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+.container {
+    position: relative;
+    width: 100%;
+    min-height: 1000px;
+    max-width: 1000px;
+    background: #fff;
+    margin: 50px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    border-radius: 10px;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.201),
+    0 -20px 20px rgba(0, 0, 0, 0.101);
+}
+.container .left-side {
+    position: relative;
+    background: rgb(82, 77, 18);
+    padding: 30px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.img {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 25%;
+    overflow: hidden;
+}
+.img img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.profile {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.profile h2 {
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-top: 10px;
+    text-align: center;
+    line-height: 1.4em;
+}
+.profile h2 #txt {
+    color: rgb(237, 171, 100);
+    font-size: 0.9rem;
+    font-weight: 400;
+}
+.contact {
+    padding-top: 40px;
+}
+.title {
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+.contact ul {
+    position: relative;
+}
+.contact ul li {
+    list-style: none;
+    position: relative;
+    margin: 10px 0;
+    cursor: pointer;
+}
+.contact ul li .icon {
+    display: inline-block;
+    width: 30px;
+    font-size: 18px;
+    color: rgb(237, 171, 100);
+}
+.contact ul li span{
+    color: #fff;
+    font-weight: 300;
+}
+li #link {
+    text-decoration: none;
+    color: #fff;
+}
+.education ul li {
+    margin-bottom: 15px;
+    /* font-size: 1rem; */
+}
+.education ul li h4 {
+    color: rgb(237, 171, 100);
+} 
+.education ul li p{
+    color: #fff;
+}
+.language li .scale {
+    position: relative;
+    background-color: rgb(46, 42, 42);
+    height: 5px;
+    width: 100%;
+    margin-top: 5px;
+    display: block;
+}
+.language li .scale div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: rgb(237, 171, 100);
+}
+.language li p {
+    color: #fff;
+}
 
 
+
+
+.container .right-side {
+    position: relative;
+    background: #fff;
+    padding: 30px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.about {
+    margin-bottom: 40px;
+}
+.title2 {
+    color: rgb(108, 101, 29);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+p {
+    color: darkolivegreen;
+    font-weight: 400;
+}
+.about .project li{
+    list-style: none;
+    cursor: pointer;
+    color: darkolivegreen;
+    margin: 10px 0;
+}
+.about .project li a{
+    text-decoration: none;
+    color: darkolivegreen;
+}
+.about .project li i {
+    font-size: 18px;
+    color: rgb(237, 171, 100);
+    width: 30px;
+    display: inline-block;
+    font-weight: 800;
+}
+.about .skills {
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+}
+.about .skills input {
+    margin: 20px 0 10px 0;
+    color: rgb(237, 171, 100);
+}
+.about .skills label {
+    margin: 20px 0 10px 0;
+    color: darkolivegreen;
+    font-weight: 500;
+}
+.hobbies ul {
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+}
+.hobbies li {
+    list-style: none;
+    font-weight: 500;
+    margin: 10px 0; 
+    color: darkolivegreen;
+}
+.hobbies li .fa-solid {
+    color: rgb(237, 171, 100);
+    font-size: 18px;
+    margin-right: 10px;
+    width: 25px;
+}
+.signature {
+    margin-top: 100px;
+    text-align: end;
+}
+.signature p {
+    font-family: 'Cedarville Cursive', cursive;
+    font-weight: 600;
+}
+.signature h4 {
+    color: darkolivegreen;
+}
 
 
 
